# tensorial

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/api_reference/: modules.rst  tensorial.datasets.rst  tensorial.gcnn.atomic.rst  tensorial.gcnn.data.rst  tensorial.gcnn.experimental.rst  tensorial.gcnn.rst  tensorial.geometry.rst  tensorial.metrics.rst  tensorial.reaxkit.rst  tensorial.reaxkit.utils.rst  tensorial.rst  tensorial.signals.rst  tensorial.training.rst
examples/: autoencoder.py
notebooks/: distances.ipynb  mask_benchmarking.ipynb  radials.ipynb  sphericals.ipynb  testing.ipynb
src/tensorial/: __init__.py  _engine.py  _utils.py  base.py  config.py  datasets.py  distances.py  metrics.py  modules.py  nn.py  nn_utils.py  tensorboards.py  tensors.py  training.py  types.py  typing.py  utils.py
src/tensorial/data/: __init__.py  _loaders.py  _types.py  samplers.py
src/tensorial/datasets/: qm9.py
src/tensorial/gcnn/: __init__.py  _base.py  _common.py  _convnetlayers.py  _diff.py  _edgewise.py  _graphs.py  _graphwise.py  _interaction_blocks.py  _mace.py  _message_passing.py  _modules.py  _nequip.py  _nodewise.py  _spatial.py  _tree.py  _typing.py  atomic.py  calc.py  data.py  datasets.py  derivatives.py  graph_ops.py  keys.py  losses.py  metrics.py  modules.py  random.py  segment.py  spec.py  typing.py  utils.py
src/tensorial/gcnn/atomic/: _importing.py  _metrics.py  _modules.py  keys.py
src/tensorial/gcnn/data/: _batching.py  _datamodule.py
src/tensorial/gcnn/experimental/: derivatives.py
src/tensorial/geometry/: _disances.py  jax_neighbours.py  np_neighbours.py  unit_cells.py
src/tensorial/jaxning/: __init__.py  hooks.py  module.py  optimizers.py  results.py  stages.py  training.py  utils.py
src/tensorial/jaxning/listeners/: early_stopping.py  progress.py
src/tensorial/metrics/: __init__.py  _registry.py  aggregation.py  collections.py  evaluator.py  regression.py  utils.py
src/tensorial/reaxkit/: __init__.py  _metrics_printer.py  _module.py  config.py  evaluate.py  from_data.py  train.py
src/tensorial/reaxkit/listeners/: parity_plotter.py
src/tensorial/reaxkit/utils/: instantiators.py  logging_utils.py  pylogger.py  (+2 more)
src/tensorial/signals/: __init__.py  bases.py  expansion.py  functions.py  radials.py
src/tensorial/training/: __init__.py  _listeners.py  _module.py  _steps.py  _trainer.py
test/: conftest.py  test_base.py  test_config.py  test_data.py  test_datasets.py  test_distances.py  test_geometry.py  test_metrics.py  test_training.py
test/data/: test_samplers.py
test/datasets/: test_dataloader.py
test/gcnn/: conftest.py  test_base.py  test_common.py  test_convnetlayers.py  test_data.py  test_derivatives.py  test_diff.py  test_edgewise.py  test_gcnn_base.py  test_gcnn_data.py  test_gcnn_datasets.py  test_gcnn_metrics.py  test_graph_ops.py  test_graphs.py  test_losses.py  test_mace.py  test_message_passing.py  test_metrics.py  test_modules.py  test_nequip.py  test_nodewise.py  utils.py
test/gcnn/atomic/: conftest.py  test_atomic.py
test/gcnn/data/: test_dataloader.py  test_loss_batch_size.py
test/reaxkit/: conftest.py  test_from_data.py  test_module.py  test_train.py
test/reaxkit/listeners/: test_parity_plotter.py
test/signals/: test_functions.py
